--- a/jason-product/src/main/resources/templates/demo/webworker.html
+++ b/jason-product/src/main/resources/templates/demo/webworker.html
@@ -2,12 +2,16 @@
 <html>
 <body>
 
-<p>Count numbers: <output id="result"></output></p>
-<button onclick="startWorker()">Start Worker</button> 
-<button onclick="stopWorker()">Stop Worker</button>
-<br><br>
+	<p>
+		Count numbers:
+		<output id="result"></output>
+	</p>
+	<button onclick="startWorker()">Start Worker</button>
+	<button onclick="stopWorker()">Stop Worker</button>
+	<br>
+	<br>
 
-<script>
+	<script>
 var w;
 
 function startWorker() {
