--- a/playground/hello-ionic-photo-gallery/src/app/tab3/tab3.page.html
+++ b/playground/hello-ionic-photo-gallery/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Photo Gallery
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,4 +14,10 @@
   </ion-header>
 
   <app-explore-container name="Tab 3 page"></app-explore-container>
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+
+    <ion-fab-button>
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
